<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/c1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/b1"
        android:layout_width="375dp"
        android:layout_height="260dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="start"
        android:padding="20dp"
        android:text="@string/start"
        android:textSize="70sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/t4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="207dp"
        android:layout_marginRight="207dp"
        android:layout_marginBottom="194dp"
        android:background="@drawable/round"
        android:padding="10dp"
        android:text="@string/_30s"
        android:textSize="40sp"
        android:backgroundTint="#9AFEFF"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toStartOf="@+id/t2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="194dp"
        android:padding="10dp"
        android:text="@string/_1_5"
        android:textSize="40sp"
        android:backgroundTint="#9AFEFF"
        android:background="@drawable/round"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/round"
        android:backgroundTint="#7FFFD4"
        android:padding="10dp"
        android:text="@string/_1_3"
        android:textSize="90sp"
        app:layout_constraintBottom_toTopOf="@+id/g1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:text="@string/correct"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g1" />

    <Button
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round"
        android:backgroundTint="#9AFEFF"
        android:onClick="again"
        android:padding="10dp"
        android:text="@string/play_again"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g1" />

    <GridLayout
        android:id="@+id/g1"
        android:layout_width="375dp"
        android:layout_height="246dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="11dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toTopOf="@+id/t4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3">

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/round"
            android:backgroundTint="#ff0000"
            android:onClick="answer"
            android:tag="0"
            android:text="@string/_1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@drawable/round"
            android:backgroundTint="#ffff00"
            android:onClick="answer"
            android:tag="1"
            android:text="@string/_2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@drawable/round"
            android:backgroundTint="#00FF00"
            android:onClick="answer"
            android:tag="2"
            android:text="@string/_3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/b5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@drawable/round"
            android:backgroundTint="#0000FF"
            android:onClick="answer"
            android:tag="3"
            android:text="@string/_4"
            android:textSize="30sp" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>